# onetool

./: .envrc  .gitignore  .nvim.lua  Cargo.toml  LICENSE  README.md  flake.nix
evals/: Cargo.toml
evals/prompts/: baseline.txt
evals/src/: main.rs  runner.rs  scoring.rs
evals/src/scenarios/: docs_discovery.rs  error_recovery.rs  general.rs  mod.rs  repl_usage.rs
examples/: aisdk-basic.rs  custom-functions.rs  genai-basic.rs  lua-repl.rs  mcp-basic.rs  mistralrs-basic.rs  needle-in-haystack.rs  notebook-demo.rs  rig-basic.rs
src/: aisdk.rs  genai.rs  lib.rs  mcp.rs  mistralrs.rs  repl.rs  rig.rs  tool_definition.rs  utils.rs
src/runtime/: docs.rs  mod.rs  onetool_api.rs  output.rs  packages.rs  policy.rs  sandbox.rs  sandbox_v2.rs  timeout.rs
src/runtime/sandbox/: mod.rs  policy.rs  v2.rs
