[package]
name = "onetool"
version = "0.0.1-alpha.1"
edition = "2024"
license = "MIT"
description = "The last LLM tool you'll every need"

[dependencies]
mlua = { version = "0.11.5", features = ["lua54", "async", "vendored"] }
tracing = "0.1"
serde_json = { version = "1.0.149", optional = true }
genai = { version = "0.5.3", optional = true }

[dev-dependencies]
genai = "0.5.3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustyline = "14.0"
serde_json = "1.0.149"

[features]
json_schema = ["dep:serde_json"]
genai = ["dep:genai", "json_schema"]

[[example]]
name = "genai-basic"
path = "examples/genai-basic.rs"
required-features = ["genai"]
