[package]
name = "onetool"
version = "0.0.1-alpha.4"
edition = "2024"
license = "MIT"
description = "The last LLM tool you'll every need"

[dependencies]
mlua = { version = "0.11.5", features = ["lua54", "vendored", "send"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }
genai = { version = "0.5.3", optional = true }
mistralrs = { version = "0.7", optional = true }
rig-core = { version = "0.31", optional = true }
aisdk = { version = "0.5", optional = true, features = ["openai"] }
once_cell = { version = "1.20", optional = true }

[dev-dependencies]
genai = "0.5.3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustyline = "14.0"
serde_json = "1.0.149"
mistralrs = "0.7"
anyhow = "1.0"
rig-core = "0.31"
aisdk = "0.5"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
regex = "1.0"

[features]
json_schema = ["dep:serde_json"]
genai = ["dep:genai", "json_schema"]
mistralrs = ["dep:mistralrs", "json_schema"]
rig = ["dep:rig-core", "dep:serde", "dep:once_cell", "json_schema"]
aisdk = ["dep:aisdk", "dep:once_cell"]

[[example]]
name = "genai-basic"
path = "examples/genai-basic.rs"
required-features = ["genai"]

[[example]]
name = "mistralrs-basic"
path = "examples/mistralrs-basic.rs"
required-features = ["mistralrs"]

[[example]]
name = "rig-basic"
path = "examples/rig-basic.rs"
required-features = ["rig"]

[[example]]
name = "aisdk-basic"
path = "examples/aisdk-basic.rs"
required-features = ["aisdk"]

[[example]]
name = "custom-functions"
path = "examples/custom-functions.rs"
