[package]
name = "onetool"
version = "0.0.1-alpha.9"
edition = "2024"
license = "MIT"
description = "Sandboxed Lua REPL for LLM tool use"

[dependencies]
mlua = { version = "0.11.5", features = ["lua54", "vendored", "send"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }
genai = { version = "0.5.3", optional = true }
mistralrs = { version = "0.7", optional = true }
rig-core = { version = "0.31", optional = true }
aisdk = { version = "0.5", optional = true, features = ["openai"] }
schemars = { version = "1.2", optional = true }
rmcp = { version = "0.16.0", features = ["server", "transport-io", "macros"], optional = true }
tokio = { version = "1", features = ["rt", "sync", "macros"], optional = true }

[dev-dependencies]
genai = "0.5.3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustyline = "14.0"
serde_json = "1.0.149"
mistralrs = "0.7"
anyhow = "1.0"
rig-core = "0.31"
aisdk = "0.5"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
regex = "1.0"
tempfile = "3.0"

[features]
json_schema = ["dep:serde_json"]
genai = ["dep:genai", "json_schema"]
mistralrs = ["dep:mistralrs", "json_schema"]
rig = ["dep:rig-core", "dep:serde", "json_schema"]
aisdk = ["dep:aisdk", "dep:schemars", "json_schema"]
mcp = ["dep:rmcp", "dep:tokio", "dep:serde", "dep:serde_json", "json_schema"]
notebook_demo = ["genai"]

[[example]]
name = "genai-basic"
path = "examples/genai-basic.rs"
required-features = ["genai"]

[[example]]
name = "mistralrs-basic"
path = "examples/mistralrs-basic.rs"
required-features = ["mistralrs"]

[[example]]
name = "rig-basic"
path = "examples/rig-basic.rs"
required-features = ["rig"]

[[example]]
name = "aisdk-basic"
path = "examples/aisdk-basic.rs"
required-features = ["aisdk"]

[[example]]
name = "mcp-basic"
path = "examples/mcp-basic.rs"
required-features = ["mcp"]

[[example]]
name = "custom-functions"
path = "examples/custom-functions.rs"

[[example]]
name = "needle-in-haystack"
path = "examples/needle-in-haystack.rs"
required-features = ["genai"]

[[example]]
name = "notebook-demo"
path = "examples/notebook-demo.rs"
required-features = ["notebook_demo"]
