[package]
name = "onetool-evals"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
onetool = { path = "..", features = ["genai"] }
genai = "0.5.3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mlua = { version = "0.11.5", features = ["lua54", "vendored", "send"] }
